--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^2.1.3",
     "react": "^0.12.2",
     "reactify": "^1.0.0",
+    "underscore": "^1.7.0",
     "vinyl-source-stream": "^1.0.0"
   }
 }
